parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON
    COMMENT
    SEMICOLON

Grammar

Rule 0     S' -> program
Rule 1     program -> comand NEWLINE
Rule 2     program -> function NEWLINE
Rule 3     program -> local_function NEWLINE
Rule 4     program -> comand NEWLINE program
Rule 5     program -> function NEWLINE program
Rule 6     program -> local_function NEWLINE program
Rule 7     function -> FUNCTION signature comands END
Rule 8     local_function -> LOCAL FUNCTION signature comands END
Rule 9     signature -> ID LPAREN sigparams RPAREN
Rule 10    signature -> ID LPAREN RPAREN
Rule 11    sigparams -> ID
Rule 12    sigparams -> ID COMMA sigparams
Rule 13    comands -> comand NEWLINE
Rule 14    comands -> comand NEWLINE comands
Rule 15    comand -> IF list_exp THEN comands END
Rule 16    comand -> IF list_exp THEN comands ELSE comands END
Rule 17    comand -> IF list_exp THEN comands elseif ELSE comands
Rule 18    comand -> other_comand
Rule 19    elseif -> ELSEIF list_exp THEN comands
Rule 20    elseif -> ELSEIF list_exp THEN comands elseif
Rule 21    other_comand -> WHILE list_exp DO comands END
Rule 22    other_comand -> fordo
Rule 23    other_comand -> exp
Rule 24    other_comand -> forin
Rule 25    other_comand -> RETURN exp
Rule 26    other_comand -> BREAK
Rule 27    fordo -> FOR list_exp DO comands END
Rule 28    forin -> FOR list_exp IN exp DO comands END
Rule 29    list_exp -> LPAREN exp RPAREN
Rule 30    list_exp -> exp
Rule 31    call -> ID LPAREN exp RPAREN
Rule 32    call -> ID LPAREN RPAREN
Rule 33    array -> LKEY exp RKEY
Rule 34    array -> LKEY RKEY
Rule 35    array -> ID LCOCHETE exp RCOCHETE
Rule 36    array -> ID LCOCHETE RCOCHETE
Rule 37    exp -> exp ASSIGN exp_1
Rule 38    exp -> exp_1
Rule 39    exp_1 -> exp_1 OR exp_2
Rule 40    exp_1 -> exp_2
Rule 41    exp_2 -> exp_2 AND exp_3
Rule 42    exp_2 -> exp_3
Rule 43    exp_3 -> exp_3 LESS_THAN exp_4
Rule 44    exp_3 -> exp_4
Rule 45    exp_4 -> exp_4 BIGGER_THAN exp_5
Rule 46    exp_4 -> exp_5
Rule 47    exp_5 -> exp_5 LESS_EQUAL exp_6
Rule 48    exp_5 -> exp_6
Rule 49    exp_6 -> exp_6 BIGGER_EQUAL exp_7
Rule 50    exp_6 -> exp_7
Rule 51    exp_7 -> exp_7 DIF exp_8
Rule 52    exp_7 -> exp_8
Rule 53    exp_8 -> exp_8 EQUAL exp_9
Rule 54    exp_8 -> exp_9
Rule 55    exp_9 -> exp_9 BITWISE_OR exp_10
Rule 56    exp_9 -> exp_10
Rule 57    exp_10 -> exp_10 BITWISE_EXC_OR exp_11
Rule 58    exp_10 -> exp_11
Rule 59    exp_11 -> exp_11 BITWISE_AND exp_12
Rule 60    exp_11 -> exp_12
Rule 61    exp_12 -> exp_12 CONCATENATION exp_13
Rule 62    exp_12 -> exp_13
Rule 63    exp_13 -> exp_13 SUB exp_14
Rule 64    exp_13 -> exp_14
Rule 65    exp_14 -> exp_14 SUM exp_15
Rule 66    exp_14 -> exp_15
Rule 67    exp_15 -> exp_15 MODULE exp_16
Rule 68    exp_15 -> exp_16
Rule 69    exp_16 -> exp_16 DIV_INT exp_17
Rule 70    exp_16 -> exp_17
Rule 71    exp_17 -> exp_17 DIV exp_18
Rule 72    exp_17 -> exp_18
Rule 73    exp_18 -> exp_18 MULT exp_19
Rule 74    exp_18 -> exp_19
Rule 75    exp_19 -> exp_19 NOT exp_20
Rule 76    exp_19 -> exp_20
Rule 77    exp_20 -> DENIAL exp_20
Rule 78    exp_20 -> exp_21
Rule 79    exp_21 -> UNARY_BITWISE_NOT exp_21
Rule 80    exp_21 -> exp_22
Rule 81    exp_22 -> LENGHT exp_22
Rule 82    exp_22 -> exp_23
Rule 83    exp_23 -> exp_23 POW exp_24
Rule 84    exp_23 -> exp_24
Rule 85    exp_24 -> exp_24 COMMA exp_25
Rule 86    exp_24 -> exp_24 DOT exp_25
Rule 87    exp_24 -> array
Rule 88    exp_24 -> call
Rule 89    exp_24 -> exp_25
Rule 90    exp_25 -> NUMBER
Rule 91    exp_25 -> STRING
Rule 92    exp_25 -> LOCAL ID
Rule 93    exp_25 -> ID
Rule 94    exp_25 -> NIL
Rule 95    exp_25 -> TRUE
Rule 96    exp_25 -> FALSE

Terminals, with rules where they appear

AND                  : 41
ASSIGN               : 37
BIGGER_EQUAL         : 49
BIGGER_THAN          : 45
BITWISE_AND          : 59
BITWISE_EXC_OR       : 57
BITWISE_OR           : 55
BREAK                : 26
COLON                : 
COMMA                : 12 85
COMMENT              : 
CONCATENATION        : 61
DENIAL               : 77
DIF                  : 51
DIV                  : 71
DIV_INT              : 69
DO                   : 21 27 28
DOT                  : 86
ELSE                 : 16 17
ELSEIF               : 19 20
END                  : 7 8 15 16 21 27 28
EQUAL                : 53
FALSE                : 96
FOR                  : 27 28
FUNCTION             : 7 8
ID                   : 9 10 11 12 31 32 35 36 92 93
IF                   : 15 16 17
IN                   : 28
LCOCHETE             : 35 36
LENGHT               : 81
LESS_EQUAL           : 47
LESS_THAN            : 43
LKEY                 : 33 34
LOCAL                : 8 92
LPAREN               : 9 10 29 31 32
MODULE               : 67
MULT                 : 73
NEWLINE              : 1 2 3 4 5 6 13 14
NIL                  : 94
NOT                  : 75
NUMBER               : 90
OR                   : 39
POW                  : 83
RCOCHETE             : 35 36
RETURN               : 25
RKEY                 : 33 34
RPAREN               : 9 10 29 31 32
SEMICOLON            : 
STRING               : 91
SUB                  : 63
SUM                  : 65
THEN                 : 15 16 17 19 20
TRUE                 : 95
UNARY_BITWISE_NOT    : 79
WHILE                : 21
error                : 

Nonterminals, with rules where they appear

array                : 87
call                 : 88
comand               : 1 4 13 14
comands              : 7 8 14 15 16 16 17 17 19 20 21 27 28
elseif               : 17 20
exp                  : 23 25 28 29 30 31 33 35 37
exp_1                : 37 38 39
exp_10               : 55 56 57
exp_11               : 57 58 59
exp_12               : 59 60 61
exp_13               : 61 62 63
exp_14               : 63 64 65
exp_15               : 65 66 67
exp_16               : 67 68 69
exp_17               : 69 70 71
exp_18               : 71 72 73
exp_19               : 73 74 75
exp_2                : 39 40 41
exp_20               : 75 76 77
exp_21               : 78 79
exp_22               : 80 81
exp_23               : 82 83
exp_24               : 83 84 85 86
exp_25               : 85 86 89
exp_3                : 41 42 43
exp_4                : 43 44 45
exp_5                : 45 46 47
exp_6                : 47 48 49
exp_7                : 49 50 51
exp_8                : 51 52 53
exp_9                : 53 54 55
fordo                : 22
forin                : 24
function             : 2 5
list_exp             : 15 16 17 19 20 21 27 28
local_function       : 3 6
other_comand         : 18
program              : 4 5 6 0
signature            : 7 8
sigparams            : 9 12

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . comand NEWLINE
    (2) program -> . function NEWLINE
    (3) program -> . local_function NEWLINE
    (4) program -> . comand NEWLINE program
    (5) program -> . function NEWLINE program
    (6) program -> . local_function NEWLINE program
    (15) comand -> . IF list_exp THEN comands END
    (16) comand -> . IF list_exp THEN comands ELSE comands END
    (17) comand -> . IF list_exp THEN comands elseif ELSE comands
    (18) comand -> . other_comand
    (7) function -> . FUNCTION signature comands END
    (8) local_function -> . LOCAL FUNCTION signature comands END
    (21) other_comand -> . WHILE list_exp DO comands END
    (22) other_comand -> . fordo
    (23) other_comand -> . exp
    (24) other_comand -> . forin
    (25) other_comand -> . RETURN exp
    (26) other_comand -> . BREAK
    (27) fordo -> . FOR list_exp DO comands END
    (37) exp -> . exp ASSIGN exp_1
    (38) exp -> . exp_1
    (28) forin -> . FOR list_exp IN exp DO comands END
    (39) exp_1 -> . exp_1 OR exp_2
    (40) exp_1 -> . exp_2
    (41) exp_2 -> . exp_2 AND exp_3
    (42) exp_2 -> . exp_3
    (43) exp_3 -> . exp_3 LESS_THAN exp_4
    (44) exp_3 -> . exp_4
    (45) exp_4 -> . exp_4 BIGGER_THAN exp_5
    (46) exp_4 -> . exp_5
    (47) exp_5 -> . exp_5 LESS_EQUAL exp_6
    (48) exp_5 -> . exp_6
    (49) exp_6 -> . exp_6 BIGGER_EQUAL exp_7
    (50) exp_6 -> . exp_7
    (51) exp_7 -> . exp_7 DIF exp_8
    (52) exp_7 -> . exp_8
    (53) exp_8 -> . exp_8 EQUAL exp_9
    (54) exp_8 -> . exp_9
    (55) exp_9 -> . exp_9 BITWISE_OR exp_10
    (56) exp_9 -> . exp_10
    (57) exp_10 -> . exp_10 BITWISE_EXC_OR exp_11
    (58) exp_10 -> . exp_11
    (59) exp_11 -> . exp_11 BITWISE_AND exp_12
    (60) exp_11 -> . exp_12
    (61) exp_12 -> . exp_12 CONCATENATION exp_13
    (62) exp_12 -> . exp_13
    (63) exp_13 -> . exp_13 SUB exp_14
    (64) exp_13 -> . exp_14
    (65) exp_14 -> . exp_14 SUM exp_15
    (66) exp_14 -> . exp_15
    (67) exp_15 -> . exp_15 MODULE exp_16
    (68) exp_15 -> . exp_16
    (69) exp_16 -> . exp_16 DIV_INT exp_17
    (70) exp_16 -> . exp_17
    (71) exp_17 -> . exp_17 DIV exp_18
    (72) exp_17 -> . exp_18
    (73) exp_18 -> . exp_18 MULT exp_19
    (74) exp_18 -> . exp_19
    (75) exp_19 -> . exp_19 NOT exp_20
    (76) exp_19 -> . exp_20
    (77) exp_20 -> . DENIAL exp_20
    (78) exp_20 -> . exp_21
    (79) exp_21 -> . UNARY_BITWISE_NOT exp_21
    (80) exp_21 -> . exp_22
    (81) exp_22 -> . LENGHT exp_22
    (82) exp_22 -> . exp_23
    (83) exp_23 -> . exp_23 POW exp_24
    (84) exp_23 -> . exp_24
    (85) exp_24 -> . exp_24 COMMA exp_25
    (86) exp_24 -> . exp_24 DOT exp_25
    (87) exp_24 -> . array
    (88) exp_24 -> . call
    (89) exp_24 -> . exp_25
    (33) array -> . LKEY exp RKEY
    (34) array -> . LKEY RKEY
    (35) array -> . ID LCOCHETE exp RCOCHETE
    (36) array -> . ID LCOCHETE RCOCHETE
    (31) call -> . ID LPAREN exp RPAREN
    (32) call -> . ID LPAREN RPAREN
    (90) exp_25 -> . NUMBER
    (91) exp_25 -> . STRING
    (92) exp_25 -> . LOCAL ID
    (93) exp_25 -> . ID
    (94) exp_25 -> . NIL
    (95) exp_25 -> . TRUE
    (96) exp_25 -> . FALSE

    IF              shift and go to state 5
    FUNCTION        shift and go to state 7
    LOCAL           shift and go to state 8
    WHILE           shift and go to state 9
    RETURN          shift and go to state 13
    BREAK           shift and go to state 14
    FOR             shift and go to state 15
    DENIAL          shift and go to state 36
    UNARY_BITWISE_NOT shift and go to state 38
    LENGHT          shift and go to state 40
    LKEY            shift and go to state 46
    ID              shift and go to state 47
    NUMBER          shift and go to state 48
    STRING          shift and go to state 49
    NIL             shift and go to state 50
    TRUE            shift and go to state 51
    FALSE           shift and go to state 52

    program                        shift and go to state 1
    comand                         shift and go to state 2
    function                       shift and go to state 3
    local_function                 shift and go to state 4
    other_comand                   shift and go to state 6
    fordo                          shift and go to state 10
    exp                            shift and go to state 11
    forin                          shift and go to state 12
    exp_1                          shift and go to state 16
    exp_2                          shift and go to state 17
    exp_3                          shift and go to state 18
    exp_4                          shift and go to state 19
    exp_5                          shift and go to state 20
    exp_6                          shift and go to state 21
    exp_7                          shift and go to state 22
    exp_8                          shift and go to state 23
    exp_9                          shift and go to state 24
    exp_10                         shift and go to state 25
    exp_11                         shift and go to state 26
    exp_12                         shift and go to state 27
    exp_13                         shift and go to state 28
    exp_14                         shift and go to state 29
    exp_15                         shift and go to state 30
    exp_16                         shift and go to state 31
    exp_17                         shift and go to state 32
    exp_18                         shift and go to state 33
    exp_19                         shift and go to state 34
    exp_20                         shift and go to state 35
    exp_21                         shift and go to state 37
    exp_22                         shift and go to state 39
    exp_23                         shift and go to state 41
    exp_24                         shift and go to state 42
    exp_25                         shift and go to state 43
    array                          shift and go to state 44
    call                           shift and go to state 45

state 1

    (0) S' -> program .



state 2

    (1) program -> comand . NEWLINE
    (4) program -> comand . NEWLINE program

    NEWLINE         shift and go to state 53


state 3

    (2) program -> function . NEWLINE
    (5) program -> function . NEWLINE program

    NEWLINE         shift and go to state 54


state 4

    (3) program -> local_function . NEWLINE
    (6) program -> local_function . NEWLINE program

    NEWLINE         shift and go to state 55


state 5

    (15) comand -> IF . list_exp THEN comands END
    (16) comand -> IF . list_exp THEN comands ELSE comands END
    (17) comand -> IF . list_exp THEN comands elseif ELSE comands
    (29) list_exp -> . LPAREN exp RPAREN
    (30) list_exp -> . exp
    (37) exp -> . exp ASSIGN exp_1
    (38) exp -> . exp_1
    (39) exp_1 -> . exp_1 OR exp_2
    (40) exp_1 -> . exp_2
    (41) exp_2 -> . exp_2 AND exp_3
    (42) exp_2 -> . exp_3
    (43) exp_3 -> . exp_3 LESS_THAN exp_4
    (44) exp_3 -> . exp_4
    (45) exp_4 -> . exp_4 BIGGER_THAN exp_5
    (46) exp_4 -> . exp_5
    (47) exp_5 -> . exp_5 LESS_EQUAL exp_6
    (48) exp_5 -> . exp_6
    (49) exp_6 -> . exp_6 BIGGER_EQUAL exp_7
    (50) exp_6 -> . exp_7
    (51) exp_7 -> . exp_7 DIF exp_8
    (52) exp_7 -> . exp_8
    (53) exp_8 -> . exp_8 EQUAL exp_9
    (54) exp_8 -> . exp_9
    (55) exp_9 -> . exp_9 BITWISE_OR exp_10
    (56) exp_9 -> . exp_10
    (57) exp_10 -> . exp_10 BITWISE_EXC_OR exp_11
    (58) exp_10 -> . exp_11
    (59) exp_11 -> . exp_11 BITWISE_AND exp_12
    (60) exp_11 -> . exp_12
    (61) exp_12 -> . exp_12 CONCATENATION exp_13
    (62) exp_12 -> . exp_13
    (63) exp_13 -> . exp_13 SUB exp_14
    (64) exp_13 -> . exp_14
    (65) exp_14 -> . exp_14 SUM exp_15
    (66) exp_14 -> . exp_15
    (67) exp_15 -> . exp_15 MODULE exp_16
    (68) exp_15 -> . exp_16
    (69) exp_16 -> . exp_16 DIV_INT exp_17
    (70) exp_16 -> . exp_17
    (71) exp_17 -> . exp_17 DIV exp_18
    (72) exp_17 -> . exp_18
    (73) exp_18 -> . exp_18 MULT exp_19
    (74) exp_18 -> . exp_19
    (75) exp_19 -> . exp_19 NOT exp_20
    (76) exp_19 -> . exp_20
    (77) exp_20 -> . DENIAL exp_20
    (78) exp_20 -> . exp_21
    (79) exp_21 -> . UNARY_BITWISE_NOT exp_21
    (80) exp_21 -> . exp_22
    (81) exp_22 -> . LENGHT exp_22
    (82) exp_22 -> . exp_23
    (83) exp_23 -> . exp_23 POW exp_24
    (84) exp_23 -> . exp_24
    (85) exp_24 -> . exp_24 COMMA exp_25
    (86) exp_24 -> . exp_24 DOT exp_25
    (87) exp_24 -> . array
    (88) exp_24 -> . call
    (89) exp_24 -> . exp_25
    (33) array -> . LKEY exp RKEY
    (34) array -> . LKEY RKEY
    (35) array -> . ID LCOCHETE exp RCOCHETE
    (36) array -> . ID LCOCHETE RCOCHETE
    (31) call -> . ID LPAREN exp RPAREN
    (32) call -> . ID LPAREN RPAREN
    (90) exp_25 -> . NUMBER
    (91) exp_25 -> . STRING
    (92) exp_25 -> . LOCAL ID
    (93) exp_25 -> . ID
    (94) exp_25 -> . NIL
    (95) exp_25 -> . TRUE
    (96) exp_25 -> . FALSE

    LPAREN          shift and go to state 57
    DENIAL          shift and go to state 36
    UNARY_BITWISE_NOT shift and go to state 38
    LENGHT          shift and go to state 40
    LKEY            shift and go to state 46
    ID              shift and go to state 47
    NUMBER          shift and go to state 48
    STRING          shift and go to state 49
    LOCAL           shift and go to state 59
    NIL             shift and go to state 50
    TRUE            shift and go to state 51
    FALSE           shift and go to state 52

    list_exp                       shift and go to state 56
    exp                            shift and go to state 58
    exp_1                          shift and go to state 16
    exp_2                          shift and go to state 17
    exp_3                          shift and go to state 18
    exp_4                          shift and go to state 19
    exp_5                          shift and go to state 20
    exp_6                          shift and go to state 21
    exp_7                          shift and go to state 22
    exp_8                          shift and go to state 23
    exp_9                          shift and go to state 24
    exp_10                         shift and go to state 25
    exp_11                         shift and go to state 26
    exp_12                         shift and go to state 27
    exp_13                         shift and go to state 28
    exp_14                         shift and go to state 29
    exp_15                         shift and go to state 30
    exp_16                         shift and go to state 31
    exp_17                         shift and go to state 32
    exp_18                         shift and go to state 33
    exp_19                         shift and go to state 34
    exp_20                         shift and go to state 35
    exp_21                         shift and go to state 37
    exp_22                         shift and go to state 39
    exp_23                         shift and go to state 41
    exp_24                         shift and go to state 42
    exp_25                         shift and go to state 43
    array                          shift and go to state 44
    call                           shift and go to state 45

state 6

    (18) comand -> other_comand .

    NEWLINE         reduce using rule 18 (comand -> other_comand .)


state 7

    (7) function -> FUNCTION . signature comands END
    (9) signature -> . ID LPAREN sigparams RPAREN
    (10) signature -> . ID LPAREN RPAREN

    ID              shift and go to state 61

    signature                      shift and go to state 60

state 8

    (8) local_function -> LOCAL . FUNCTION signature comands END
    (92) exp_25 -> LOCAL . ID

    FUNCTION        shift and go to state 62
    ID              shift and go to state 63


state 9

    (21) other_comand -> WHILE . list_exp DO comands END
    (29) list_exp -> . LPAREN exp RPAREN
    (30) list_exp -> . exp
    (37) exp -> . exp ASSIGN exp_1
    (38) exp -> . exp_1
    (39) exp_1 -> . exp_1 OR exp_2
    (40) exp_1 -> . exp_2
    (41) exp_2 -> . exp_2 AND exp_3
    (42) exp_2 -> . exp_3
    (43) exp_3 -> . exp_3 LESS_THAN exp_4
    (44) exp_3 -> . exp_4
    (45) exp_4 -> . exp_4 BIGGER_THAN exp_5
    (46) exp_4 -> . exp_5
    (47) exp_5 -> . exp_5 LESS_EQUAL exp_6
    (48) exp_5 -> . exp_6
    (49) exp_6 -> . exp_6 BIGGER_EQUAL exp_7
    (50) exp_6 -> . exp_7
    (51) exp_7 -> . exp_7 DIF exp_8
    (52) exp_7 -> . exp_8
    (53) exp_8 -> . exp_8 EQUAL exp_9
    (54) exp_8 -> . exp_9
    (55) exp_9 -> . exp_9 BITWISE_OR exp_10
    (56) exp_9 -> . exp_10
    (57) exp_10 -> . exp_10 BITWISE_EXC_OR exp_11
    (58) exp_10 -> . exp_11
    (59) exp_11 -> . exp_11 BITWISE_AND exp_12
    (60) exp_11 -> . exp_12
    (61) exp_12 -> . exp_12 CONCATENATION exp_13
    (62) exp_12 -> . exp_13
    (63) exp_13 -> . exp_13 SUB exp_14
    (64) exp_13 -> . exp_14
    (65) exp_14 -> . exp_14 SUM exp_15
    (66) exp_14 -> . exp_15
    (67) exp_15 -> . exp_15 MODULE exp_16
    (68) exp_15 -> . exp_16
    (69) exp_16 -> . exp_16 DIV_INT exp_17
    (70) exp_16 -> . exp_17
    (71) exp_17 -> . exp_17 DIV exp_18
    (72) exp_17 -> . exp_18
    (73) exp_18 -> . exp_18 MULT exp_19
    (74) exp_18 -> . exp_19
    (75) exp_19 -> . exp_19 NOT exp_20
    (76) exp_19 -> . exp_20
    (77) exp_20 -> . DENIAL exp_20
    (78) exp_20 -> . exp_21
    (79) exp_21 -> . UNARY_BITWISE_NOT exp_21
    (80) exp_21 -> . exp_22
    (81) exp_22 -> . LENGHT exp_22
    (82) exp_22 -> . exp_23
    (83) exp_23 -> . exp_23 POW exp_24
    (84) exp_23 -> . exp_24
    (85) exp_24 -> . exp_24 COMMA exp_25
    (86) exp_24 -> . exp_24 DOT exp_25
    (87) exp_24 -> . array
    (88) exp_24 -> . call
    (89) exp_24 -> . exp_25
    (33) array -> . LKEY exp RKEY
    (34) array -> . LKEY RKEY
    (35) array -> . ID LCOCHETE exp RCOCHETE
    (36) array -> . ID LCOCHETE RCOCHETE
    (31) call -> . ID LPAREN exp RPAREN
    (32) call -> . ID LPAREN RPAREN
    (90) exp_25 -> . NUMBER
    (91) exp_25 -> . STRING
    (92) exp_25 -> . LOCAL ID
    (93) exp_25 -> . ID
    (94) exp_25 -> . NIL
    (95) exp_25 -> . TRUE
    (96) exp_25 -> . FALSE

    LPAREN          shift and go to state 57
    DENIAL          shift and go to state 36
    UNARY_BITWISE_NOT shift and go to state 38
    LENGHT          shift and go to state 40
    LKEY            shift and go to state 46
    ID              shift and go to state 47
    NUMBER          shift and go to state 48
    STRING          shift and go to state 49
    LOCAL           shift and go to state 59
    NIL             shift and go to state 50
    TRUE            shift and go to state 51
    FALSE           shift and go to state 52

    list_exp                       shift and go to state 64
    exp                            shift and go to state 58
    exp_1                          shift and go to state 16
    exp_2                          shift and go to state 17
    exp_3                          shift and go to state 18
    exp_4                          shift and go to state 19
    exp_5                          shift and go to state 20
    exp_6                          shift and go to state 21
    exp_7                          shift and go to state 22
    exp_8                          shift and go to state 23
    exp_9                          shift and go to state 24
    exp_10                         shift and go to state 25
    exp_11                         shift and go to state 26
    exp_12                         shift and go to state 27
    exp_13                         shift and go to state 28
    exp_14                         shift and go to state 29
    exp_15                         shift and go to state 30
    exp_16                         shift and go to state 31
    exp_17                         shift and go to state 32
    exp_18                         shift and go to state 33
    exp_19                         shift and go to state 34
    exp_20                         shift and go to state 35
    exp_21                         shift and go to state 37
    exp_22                         shift and go to state 39
    exp_23                         shift and go to state 41
    exp_24                         shift and go to state 42
    exp_25                         shift and go to state 43
    array                          shift and go to state 44
    call                           shift and go to state 45

state 10

    (22) other_comand -> fordo .

    NEWLINE         reduce using rule 22 (other_comand -> fordo .)


state 11

    (23) other_comand -> exp .
    (37) exp -> exp . ASSIGN exp_1

    NEWLINE         reduce using rule 23 (other_comand -> exp .)
    ASSIGN          shift and go to state 65


state 12

    (24) other_comand -> forin .

    NEWLINE         reduce using rule 24 (other_comand -> forin .)


state 13
